tools/fleet/fixtures/packets/invalid/stale-packet.case
source=valid-work.packet
mutation=set Stale-When to always
expected=invalid
